package es.urjc.mastercloudapps.mastermind.objectOrientedDesign.project.mastermind.models;

public enum Error {
	DUPLICATED,
	WRONG_CHARACTERS,
	WRONG_LENGTH;
	
}
